namespace ChessLibrary.Enum;

public enum PieceType
{
	Pawn,
	King,
	Queen,
	Bishop,
	Rook,
	Knight
}
