namespace ChessLibrary.Enum;

public enum WinningCondition
{
	Checkmate,
	Stalemate,
	InsufficientMaterial,
	ThreefoldRepetition,
	Resignation,
	Timeout,
}
