namespace Facade.Others;

public enum PieceColor
{
    
}